test/e2e/testdata/local-ratelimit-distinct-header.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-distinct-header
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-ratelimit-distinct-header
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 10
          unit: Hour
      - clientSelectors:
        - headers:
          - name: x-user-id
            type: Distinct
        limit:
          requests: 3
          unit: Hour
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-distinct-header-and-exact-header
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-ratelimit-distinct-header-and-exact-header
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 10
          unit: Hour
      - clientSelectors:
        - headers:
          - name: x-user-id
            type: Distinct
          - name: x-org-id
            value: foo
        limit:
          requests: 3
          unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ratelimit-distinct-header
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
    matches:
    - path:
        type: Exact
        value: /ratelimit-distinct-header
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ratelimit-distinct-header-and-exact-header
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
    matches:
    - path:
        type: Exact
        value: /ratelimit-distinct-header-and-exact-header
